add create_playlist, pre_roll_on, pre_roll_off to scripted schedules (#2387)
